<resources>
	<string name="app_name">Immicart Shopping</string>
	<string name="title_activity_choose_store">ChooseStoreActivity</string>
	<string name="please_wait_dialog">Please wait...</string>
	<string name="fetching_details_text">Fetching Details</string>
	<string name="enter_phone_number">Enter Phone Number</string>
	<string name="request_mpesaexpress">Request MPESAExpress</string>
	<string name="title_activity_payment">PaymentActivity</string>
	
	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="mwea_pishori">2 kg of Mwea Pishori Rice</string>
	<string name="_2_kg">2 kg</string>
	<string name="itrm_description">Description</string>
	<string name="instructions">Instructions</string>
	<string name="delete">Remove</string>
	<string name="_2">2</string>
	<string name="ksh_200">Ksh 200</string>
	<string name="ksh_350">Ksh 350</string>
	<string name="checkout_text">Checkout</string>
	<string name="sh_3000_00">Sh 3000.00</string>
	<string name="title_cart_activity">Personal Cart</string>
	<string name="ente_phone_number">MPESA Mobile number</string>
	<string name="button_pay">Make Payment</string>
	<string name="title_activity_products_page">ProductsPageActivity</string>
	<string name="title_activity_product_detail">ProductDetailActivity</string>
	<string name="title_activity_delivery_cart">DeliveryCartActivity</string>
	<string name="title_activity_trtack_order_map">TrtackOrderMapActivity</string>
	<!--<string name="google_directions_key">AIzaSyB-b75UFtfPlUpqdFokEk2CPTlESDDTKCA</string>-->
	<string name="title_activity_maps">Map</string>
	<string name="menu_shop">Shop</string>
	<string name="menu_search">Search</string>
	<string name="menu_wallet">Wallet</string>
	<string name="title_activity_pick_delivery_location">PickDeliveryLocationActivity</string>
	<string name="menu_orders">Orders</string>
	
	
	<string name="default_location">Kiongo Hostel</string>
	<string name="add_delievry_address">Location</string>
	<string name="select_delivery_date_and_time">Delivery Time</string>
	
	<string name="mobile_number">MPESA Mobile Number</string>
	<string name="select_payment_options">Payment Options</string>
	<string name="place_order">Place Order</string>
	<string name="delivery">Delivery</string>
	<string name="pick_up">Pick Up</string>
	<string name="today">Today</string>
	<string name="date">9/11</string>
	<string name="note">Kindly note that we don\'t deliver before 7 am and past 9 pm due to security reasons</string>
	<string name="kiongo_hostel">Kiongo Hostel</string>
	<string name="location_hint">Type Delivery location</string>
	<string name="select_location">Select Location</string>
	<string name="_phone_number">Enter phone number to be contacted</string>
	<string name="done">Done</string>
	<string name="service_not_available">IO Exception. Service not available</string>
	<string name="invalid_lat_long_used">Invalid latitude or longitude values.</string>
	<string name="no_address_found">No address was found</string>
	<string name="address_found">Address Found!</string>
	<string name="no_geocoder_available">No Geocoder available</string>
	
	
	<string name="default_notification_channel_id" translatable="false">immicart_fcm_default_channel</string>
	<string name="channel_description">Immicart order status notifications</string>
	<string name="channel_name">Immicart notifications channel</string>
	
	
	<!-- Strings for barcode detection settings. -->
	<string name="pref_category_barcode_detection">Barcode detection</string>
	<string name="pref_key_barcode_reticle_width" translatable="false">barcode_brw</string>
	<string name="pref_title_barcode_reticle_width">Barcode reticle width</string>
	<string name="pref_summary_barcode_reticle_width" formatted="false">Relative to the camera view width, ranges from
		50% to 95%
	</string>
	<string name="pref_key_barcode_reticle_height" translatable="false">barcode_brh</string>
	<string name="pref_title_barcode_reticle_height">Barcode reticle height</string>
	<string name="pref_summary_barcode_reticle_height" formatted="false">Relative to the camera view height, ranges from
		20% to 80%
	</string>
	<string name="pref_key_enable_barcode_size_check" translatable="false">barcode_ebsc</string>
	<string name="pref_title_enable_barcode_size_check">Enable barcode size check</string>
	<string name="pref_summary_enable_barcode_size_check">Will prompt user to move camera closer if the detected barcode
		is too small
	</string>
	<string name="pref_key_minimum_barcode_width" translatable="false">barcode_mbw</string>
	<string name="pref_title_minimum_barcode_width">Minimum barcode width</string>
	<string name="pref_summary_minimum_barcode_width" formatted="false">Relative to the reticle width, ranges from 20%
		to 80% (only applicable when barcode size check enabled)
	</string>
	<string name="pref_key_delay_loading_barcode_result" translatable="false">barcode_dlbr</string>
	<string name="pref_title_delay_loading_barcode_result">Delay loading barcode result</string>
	<string name="pref_summary_delay_loading_barcode_result">Will show the loading spinner for 2s</string>
	
	<!-- Strings for camera settings. -->
	<string name="pref_category_camera">Camera</string>
	<string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
	<string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>
	<string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
	
	<!-- Strings for object detection settings. -->
	<string name="pref_category_object_detection">Object detection</string>
	<string name="pref_key_object_detector_enable_multiple_objects" translatable="false">odemo</string>
	<string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
	<string name="pref_key_object_detector_enable_classification" translatable="false">odec</string>
	<string name="pref_title_object_detector_enable_classification">Enable classification</string>
	
	<!-- Strings for product search settings. -->
	<string name="pref_category_product_search">Product search</string>
	<string name="pref_key_enable_auto_search" translatable="false">pkeas</string>
	<string name="pref_title_enable_auto_search">Enable auto search</string>
	<string name="pref_key_confirmation_time_in_manual_search" translatable="false">ctims</string>
	<string name="pref_title_confirmation_time_in_manual_search">Confirmation time in manual search</string>
	<string name="pref_summary_confirmation_time_in_manual_search">Ranges from 100ms to 1000ms</string>
	<string name="pref_key_confirmation_time_in_auto_search" translatable="false">ctias</string>
	<string name="pref_title_confirmation_time_in_auto_search">Confirmation time in auto search</string>
	<string name="pref_summary_confirmation_time_in_auto_search">Ranges from 500ms to 2000ms</string>
	
	<string name="cd_settings_button">Settings</string>
	<string name="cd_close_button">Back</string>
	<string name="cd_flash_button">Toggle camera flash</string>
	<string name="cd_photo_library_button">Upload image</string>
	
	<string name="prompt_point_at_an_object">Point your camera at an object</string>
	<string name="prompt_point_at_a_barcode">Hold the camera over a barcode to search for an item</string>
	<string name="prompt_hold_camera_steady">Keep camera still for a moment</string>
	<string name="prompt_move_camera_closer">Move closer to search</string>
	<string name="prompt_searching">Searching&#8230;</string>
	
	<string name="product_search_button">Search object</string>
	
	<string name="from9am">9am - 10am</string>
	<string name="from10am">10am - 11am</string>
	<string name="from11am">11am - 12pm</string>
	<string name="from12pm">12pm - 1pm</string>
	<string name="from1pm">1pm - 2pm</string>
	<string name="from2pm">2pm - 3pm</string>
	<string name="from3pm">3pm - 4pm</string>
	<string name="from4pm">4pm - 5pm</string>
	<string name="from5pm">5pm - 6pm</string>
	<string name="from6pm">6pm - 7pm</string>
	<string name="from7pm">7pm - 8pm</string>
	<string name="from8pm">8pm - 9pm</string>
	
	
	<string-array name="from_9am">
		<item>9am - 10am</item>
		<item>10am - 11am</item>
		<item>11am - 12pm</item>
		<item>12pm - 1pm</item>
		<item>1pm - 2pm</item>
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_10am">
		<item>10am - 11am</item>
		<item>11am - 12pm</item>
		<item>12pm - 1pm</item>
		<item>1pm - 2pm</item>
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_11am">
		<item>11am - 12pm</item>
		<item>12pm - 1pm</item>
		<item>1pm - 2pm</item>
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_12pm">
		<item>12pm - 1pm</item>
		<item>1pm - 2pm</item>
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_1pm">
		<item>1pm - 2pm</item>
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_2pm">
		<item>2pm - 3pm</item>
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_3pm">
		<item>3pm - 4pm</item>
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_4pm">
		<item>4pm - 5pm</item>
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_5pm">
		<item>5pm - 6pm</item>
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_6pm">
		<item>6pm - 7pm</item>
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_7pm">
		<item>7pm - 8pm</item>
		<item>8pm - 9pm</item>
	</string-array>
	<string-array name="from_8pm">
		<item>8pm - 9pm</item>
	</string-array>
	<!--<string name="title_activity_drivers_tip">DriversTipActivity</string>-->
	<string name="go_to_driver">\u2022 100% of tips go to your shopper</string>
	<string name="tip_optional">\u2022 Tips are always optional</string>
	<string name="tips_changeable">\u2022 You can change your tip after your delivery or order pickup</string>


</resources>
