<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
	<data>
	
	</data>
	<androidx.constraintlayout.widget.ConstraintLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="16dp"
			android:layout_marginTop="16dp">
		<ImageView
				android:layout_width="50dp"
				android:layout_height="100dp"
				tools:srcCompat="@tools:sample/avatars[9]"
				android:id="@+id/cartImage"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				android:layout_marginStart="16dp"
				android:scaleType="centerInside"/>
		<TextView
				tools:text="@string/mwea_pishori"
				android:layout_width="175dp"
				android:layout_height="65dp"
				android:id="@+id/itemName"
				app:layout_constraintStart_toEndOf="@+id/cartImage"
				android:layout_marginStart="16dp"
				app:layout_constraintTop_toTopOf="parent"
				android:layout_marginTop="16dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Medium"
				/>
		<TextView
				tools:text="@string/_2_kg"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/itemDescription"
				app:layout_constraintTop_toBottomOf="@+id/itemName"
				app:layout_constraintStart_toEndOf="@+id/cartImage"
				android:layout_marginStart="16dp"
				android:layout_marginTop="68dp"
				android:textAppearance="@style/TextAppearance.AppCompat.Small"
				app:layout_constraintBottom_toBottomOf="@+id/cartImage"
				app:layout_constraintVertical_bias="1.0"
				android:layout_marginEnd="8dp"
				app:layout_constraintEnd_toEndOf="@+id/itemName"
				app:layout_constraintHorizontal_bias="0.0"
				/>
		<TextView
				android:text="@string/instructions"
				android:layout_width="wrap_content"
				android:layout_height="0dp"
				android:id="@+id/instructionsText"
				app:layout_constraintTop_toBottomOf="@+id/itemDescription"
				android:layout_marginTop="16dp"
				app:layout_constraintStart_toEndOf="@+id/cartImage"
				android:layout_marginStart="16dp"
				/>
		<TextView
				android:text="@string/delete"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/deleteText"
				app:layout_constraintTop_toBottomOf="@+id/itemName"
				app:layout_constraintBottom_toBottomOf="@+id/instructionsText"
				app:layout_constraintStart_toEndOf="@+id/instructionsText"
				android:layout_marginStart="16dp"
				app:layout_constraintVertical_bias="1.0"
				app:layout_constraintEnd_toEndOf="@+id/itemName"
				android:layout_marginTop="16dp"
				app:layout_constraintHorizontal_bias="0.9"
				/>
		<EditText
				android:layout_width="44dp"
				android:layout_height="54dp"
				android:inputType="numberDecimal"
				tools:text="@string/_2"
				android:id="@+id/itemNumber"
				android:gravity="center_horizontal"
				app:layout_constraintStart_toEndOf="@+id/itemName"
				android:layout_marginStart="28dp"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintBottom_toBottomOf="@+id/itemName"
				android:padding="16sp"
				app:layout_constraintVertical_bias="0.0"
				android:textAppearance="@style/TextAppearance.AppCompat.Large"
				/>
		<TextView
				android:text="@string/ksh_200"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/itemPrice"
				app:layout_constraintStart_toEndOf="@+id/itemNumber"
				android:layout_marginStart="16dp"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="16dp"
				android:layout_marginTop="16dp"
				app:layout_constraintTop_toTopOf="parent"
				app:layout_constraintHorizontal_bias="0.51"
				/>
		
		<!--The original price of the item. By default it is invisible-->
		<TextView
				android:text="@string/ksh_350"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/cancelledPrice"
				android:visibility="invisible"
				app:layout_constraintTop_toBottomOf="@+id/itemPrice"
				app:layout_constraintEnd_toEndOf="parent"
				android:layout_marginEnd="8dp"
				app:layout_constraintStart_toEndOf="@+id/itemNumber"
				android:layout_marginStart="8dp"
				android:layout_marginTop="16dp"
				app:layout_constraintHorizontal_bias="0.513"
				/>
	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>