<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
	<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/textViewAutoCompleteLocation"
			android:layout_marginStart="@dimen/standard_margin"
			android:text="@string/default_location"
			android:clickable="true"
			android:layout_marginTop="@dimen/standard_margin"
			android:textSize="@dimen/default_text_size"
			app:fontFamily="@font/roboto_thin"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="@dimen/standard_margin"
			android:focusable="true"/>
	
	<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:inputType="textPersonName"
			android:hint="@string/location_hint"
			android:layout_marginStart="@dimen/standard_margin"
			android:background="@drawable/et_background"
			android:padding="@dimen/standard_margin"
			android:textSize="@dimen/default_text_size"
			android:id="@+id/editTextLocation"
			android:autofillHints="@+id/textViewAutoCompleteLocation"
			tools:targetApi="o"/>
	<androidx.recyclerview.widget.RecyclerView
			android:id="@+id/locationHintRecycler"
			tools:listitem="@layout/item_location_hint"
			android:layout_marginTop="@dimen/standard_margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		
	</androidx.recyclerview.widget.RecyclerView>
	
	<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/selectLocationButton"
			android:background="@drawable/pay_button_design"
			android:textColor="@android:color/white"
			android:text="@string/select_location"
			android:textAllCaps="false"
			android:textSize="@dimen/default_text_size"
			android:layout_margin="@dimen/standard_margin"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"/>
</LinearLayout>