<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".delivery.DeliveryDetailsFragment"
      
      
                                                   android:id="@+id/frameLayout">
	
	
	<TextView
			android:text="@string/add_delievry_address"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_delivery_address"
			app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="80dp"
			android:textStyle="bold"
			android:textSize="24sp" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toTopOf="@+id/add_house_number" app:layout_constraintTop_toTopOf="parent"/>
	<TextView
			android:text="@string/house_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_house_number" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintTop_toBottomOf="@+id/add_delivery_address" android:layout_marginBottom="24dp"
			app:layout_constraintBottom_toTopOf="@+id/add_delivery_date"
			android:textStyle="bold"
			android:textSize="24sp" android:layout_marginTop="16dp" android:visibility="gone"/>
	<TextView
			android:text="@string/select_delivery_date_and_time"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_delivery_date" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
			app:layout_constraintTop_toBottomOf="@+id/add_house_number" android:layout_marginBottom="24dp"
			app:layout_constraintBottom_toTopOf="@+id/add_phone_number"
			android:textStyle="bold"
			android:textSize="24sp"/>
	<TextView
			android:text="@string/mobile_number"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_phone_number"
			android:textStyle="bold"
			android:textSize="24sp" tools:layout_editor_absoluteX="122dp" tools:layout_editor_absoluteY="246dp"/>
	<TextView
			android:text="@string/select_payment_options"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/add_payment_option" app:layout_constraintEnd_toEndOf="parent"
			android:layout_marginEnd="88dp"
			app:layout_constraintTop_toBottomOf="@+id/add_phone_number"
			android:textStyle="bold"
			android:textSize="24sp" android:layout_marginTop="444dp"/>
	<Button
			android:text="@string/place_order"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:id="@+id/button_place_order" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"
			app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
			app:layout_constraintBottom_toBottomOf="parent"
			android:textStyle="bold"
			android:textSize="24sp"/>
	<ImageView
			android:src="@android:drawable/ic_dialog_map"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/map_iv" app:layout_constraintEnd_toStartOf="@+id/add_delivery_address"
			android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp" android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintHorizontal_bias="0.2"/>
	<ImageView
			android:src="@drawable/ic_delete_primary_color_24dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" tools:layout_editor_absoluteY="64dp"
			android:id="@+id/imageView4" app:layout_constraintEnd_toStartOf="@+id/add_delivery_date"
			android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
			android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>