<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		tools:context=".delivery.checkout.DriversTipActivity">
	<androidx.appcompat.widget.Toolbar
			android:layout_alignParentTop="true"
			android:id="@+id/toolbar"
			app:title=""
			android:background="@android:color/white"
			app:popupTheme="@style/AppTheme.PopupOverlay"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize">
		<ImageButton
				android:id="@+id/go_back_button"
				android:layout_margin="8dp"
				android:background="@android:color/white"
				android:src="@drawable/ic_keyboard_arrow_left_green_24dp"
				android:layout_width="48dp"
				android:layout_height="48dp"/>
		
		<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="Tip your delivery person?"
				android:textSize="16sp"
				android:textStyle="bold"
				android:layout_gravity="center"
				android:id="@+id/toolbar_title" />
	
	</androidx.appcompat.widget.Toolbar>
	
	<androidx.core.widget.NestedScrollView
			android:layout_below="@+id/toolbar"
			android:layout_width="match_parent"
	                                       android:layout_height="wrap_content">
		
	<RelativeLayout android:layout_width="match_parent"
	                android:layout_height="wrap_content">
		
	<TextView
			android:textSize="16sp"
			android:layout_marginStart="16dp"
			android:layout_marginEnd="16dp"
			android:layout_marginTop="16dp"
			android:id="@+id/accountability"
			android:text="@string/go_to_driver"
			android:layout_width="wrap_content"
	          android:layout_height="wrap_content"/>
	<TextView
			android:textSize="16sp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:id="@+id/optional_tips"
			android:layout_below="@+id/accountability"
			android:text="@string/tip_optional"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	<TextView
			android:id="@+id/tips_changeable"
			android:textSize="16sp"
			android:layout_marginStart="16dp"
			android:layout_marginTop="16dp"
			android:layout_marginEnd="16dp"
			android:layout_below="@+id/optional_tips"
			android:text="@string/tips_changeable"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>
	
	
	<androidx.cardview.widget.CardView
			app:cardElevation="0dp"
			android:layout_below="@+id/tips_changeable"
			android:layout_marginTop="20dp"
			android:layout_marginBottom="80dp"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		
		<RadioGroup
				android:layout_margin="16dp"
				android:layout_alignParentStart="true"
				android:id="@+id/radioGroup"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
		>
			
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_none"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="None" />
			
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_50"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="KES 50" />
			
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_100"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="KES 100" />
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_150"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="KES 150" />
			
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_200"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="KES 200" />
			<RadioButton
					android:buttonTint="@color/colorGreen"
					android:layout_marginTop="20dp"
					android:layout_marginBottom="20dp"
					android:textSize="16sp"
					android:padding="4dp"
					android:id="@+id/tip_other_amount"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="Other Amount" />
		
		</RadioGroup>
	</androidx.cardview.widget.CardView>
	</RelativeLayout>
	
	</androidx.core.widget.NestedScrollView>
	
	<LinearLayout
			android:background="@android:color/white"
			android:layout_alignParentBottom="true"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">
		<Button
				android:id="@+id/save_tip_btn"
				android:layout_marginBottom="@dimen/standard_margin"
				android:textSize="20sp"
				android:fontFamily="@font/roboto_medium"
				android:background="@drawable/pay_button_design"
				android:textColor="@android:color/white"
				android:text="Save Tip"
				android:textAllCaps="false"
				android:layout_margin="@dimen/standard_margin"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"/>
	</LinearLayout>


</RelativeLayout>